--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -9,7 +9,7 @@
     
     <!-- Bootstrap CSS (integrity removed to avoid hash mismatch warning) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <title>The Restaurant</title>
   </head>
   <body>
